--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: My Website
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   Website created for 14 Nov 2023 Sherman Centre workshop.
-baseurl: "/2023-11-14F_TestSite" # the subpath of your site, e.g. /blog
+baseurl: "/2023-11-14_TestSite" # the subpath of your site, e.g. /blog
 url: "https://chungkky.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  Jekyll
