--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@
 title: My Website
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  Brought to you by the Lewis & Ruth Sherman Centre for Digital Scholarship and the McMaster University Library.
-baseurl: "/website-template" # the subpath of your site, e.g. /blog
-url: "https://cmiya.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+  Test site created during 14 November 2023 workshop on building Jekyll Websites, Sherman Centre for Digital Scholarship and the McMaster University Library.
+baseurl: "/2023-11-14_TestSite" # the subpath of your site, e.g. /blog
+url: "https://chungkky.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  Jekyll
 
